Improve spacing, fix borders

--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ a {
   color: hsl(39.82deg 4.53% 19.57% / 88%);
   display: flex;
   justify-content: center;
-  margin: 5px auto;
+  margin: 13px auto 5px auto;
   max-width: 45%;
   padding: 8px;
   text-decoration: none;
@@ -62,7 +62,9 @@ img {
 
 table {
   background-color: hsl(39.82deg 4.53% 19.57% / 88%);
-  border-collapse: collapse;
+  border-collapse: separate;
+  border: 1px solid hsl(92, 12%, 22%);
+  border-spacing: 0;
   font-size: 32px;
   margin: 18px auto;
   table-layout: auto;
